--- a/web/styles.css
+++ b/web/styles.css
@@ -1,8 +1,29 @@
 @font-face {
-    font-family: 'Everson Mono';
-    src: url('fonts/Everson Mono.ttf') format('truetype');
+    font-family: 'Symbola';
+    src: url('fonts/Symbola.ttf') format('truetype');
     font-style: normal;
 }
+body {
+    display: flex;
+    width: 99%;
+}
+#main-content {
+    padding-left: 215px;
+    width: 100%;
+}
+#title {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 60px;
+}
+#title h1 {
+    font-size: 18pt;
+    font-weight: normal;
+    padding-left: 10px;
+    font-family: 'Gill Sans','Arial','Helvetia','Sans-Serif';
+}
+
 .code-block {
     float: left;
     border: 1px solid red;
@@ -12,14 +33,14 @@
 }
 .valence-code {
     float: left;
-    font-family: 'Everson Mono';
+    font-family: 'Symbola';
     letter-spacing: .3rem;
-    font-size: 22pt;
+    font-size: 18pt;
 }
 .js-code {
     float: left;
-    font-family: 'Everson Mono';
-    font-size: 22pt;
+    font-family:'Courier New', Courier, monospace;
+    font-size: 18pt;
     margin-left: 5px;
     padding-left: 10px;
     border-left: 1px solid red;
@@ -29,7 +50,7 @@
     display: block;
 }
 #program-text {
-    font-family: 'Everson Mono';
+    font-family: 'Symbola';
     font-size: 22pt;
     letter-spacing: .3rem;
     border: 1px solid #000;
@@ -38,4 +59,142 @@
     caret-color: red;
     width: 400px;
     min-height: 200px;
+}
+#text-holder {
+    float: left;
+    padding-right: 10px;
+}
+
+/* Left menu */
+
+#left-menu {
+    position: fixed;
+    top: 60px;
+    width: 200px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: calc(100% - 60px);
+    font-family: 'Gill Sans';
+    width: 200px;
+    border-right: 1px solid black;
+    padding-right: 0;
+}
+.menu-item {
+    background-color: #eee;
+    width: 200px;
+    font-size: 20pt;
+}
+.menu-item::before {
+    display: inline-block;
+    width: 20px;
+    content: '\25B6';
+    font-size: 10pt;
+    padding-right: 5px;
+    color: #999;
+    padding-left: 5px;
+}
+.open::before {
+    display: inline-block;
+    width: 20px;
+    transform: rotate(90deg) translate(5px, 7px);
+
+    /* content: '\25BC'; */
+}
+.menu-item ul {
+    padding-top: 10px;
+    list-style-type: none;
+    margin-left: none;
+    padding-left: 0px;
+    background-color: #fff;
+    margin-top: 0px;
+    /* margin-bottom: 0px; */
+    border-top: 1px solid #ddd;
+}
+.menu-item .sub-menu {
+    display: none;
+    padding: 5px 0 2px 10px;
+}
+.open .sub-menu {
+    display: block;
+}
+.sub-menu {
+    font-size: 12pt;
+    margin-left: none;
+}
+.sub-menu-block {
+    display: inline-block;
+    width: 20px;
+    margin-right: 5px;
+    border: 1px solid #ddd;
+}
+.sub-menu-digit {
+    background-color: #ddf;
+}
+.sub-menu-var {
+    background-color: #fdd;
+}
+.sub-menu-type {
+    background-color: #dff;
+}
+.sub-menu-exp {
+    background-color: #ffc;
+}
+.sub-menu-cmd {
+    background-color: #dfd;
+}
+
+/* Control menu */
+
+#play-controls {
+    padding-top: 10px;
+}
+.control-menu-item {
+    /* padding: 10px; */
+    font-size: 22pt;
+    float: left;
+    border: 1px solid black;
+    margin: 10px;
+    border-top-right-radius: 22px;
+    border-bottom-right-radius: 22px;
+}
+.control-key {
+    float: right;
+    font-size: 12pt;
+    font-family: 'Gill Sans','Arial','Helvetia','Sans-Serif';
+    background-color: #eee;
+    width:50px;
+    padding-top: 10px;
+}
+.btn {
+    padding: 6px;
+    border: 0px;
+    cursor: pointer;
+    background-color: #000;
+    border-radius: 12px;
+    color: #fff;
+}
+.add-btn {
+    width: 40px;
+    font-size: 18pt;
+    margin-right: 10px;
+}
+.other-btn {
+    font-size: 18pt;
+    margin-right: 10px;
+    height: 40px;
+    font-size: 12pt;
+    padding: 0 10px 0 10px;
+}
+
+/* running programs */
+h3 {
+    clear: both;
+    padding-top: 10px;
+    padding-left: 5px;
+    font-family: 'Gill Sans','Arial','Helvetia','Sans-Serif';
+    font-size: 125%;
+    font-weight: normal;
+}
+#programs-running {
+    clear: both;
 }
